- removed old postgres dirs - changed deploy ymls: postgres 16 images to use variable instead of hardcoded - locked postgres:16 to postgres:16.9

--- a/playbooks/roles/apps/templates/docker/docker-compose.yml
+++ b/playbooks/roles/apps/templates/docker/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
     apps-postgres-16:
         container_name: apps-postgres-16
-        image: postgres:16
+        image: {{ apps_postgres16_image }}
         networks:
             - tapis
         environment:
@@ -43,7 +43,7 @@ services:
 
     apps-migrations:
         container_name: apps-migrations-16
-        image: postgres:16
+        image: {{ apps_postgres16_image }}
         networks:
             - tapis
         env_file:
