--- a/playbooks/roles/files/templates/docker/docker-compose.yml
+++ b/playbooks/roles/files/templates/docker/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   files-postgres:
     container_name: files-postgres
-    image: {{ files_postgres_image }}
+    image: {{ files_postgres16_image }}
     environment:
      - POSTGRES_USER=tapisfiles
      - POSTGRES_DATABASE=tapisfiles
