--- a/playbooks/roles/apps/defaults/main/images.yml
+++ b/playbooks/roles/apps/defaults/main/images.yml
@@ -1,3 +1,4 @@
 apps_api_image: tapis/apps:1.9.0
 apps_pgadmin_image: dpage/pgadmin4:6.20
 apps_util_image: tapis/ubutil2204:1.9.0
+apps_postgres16_image: postgres:16.9
