--- a/playbooks/roles/apps/templates/kube/api/service.yml
+++ b/playbooks/roles/apps/templates/kube/api/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:  
   name: apps-api
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: apps-api
   ports:  
