--- a/playbooks/roles/apps/templates/kube/api/service_debug.yml
+++ b/playbooks/roles/apps/templates/kube/api/service_debug.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:  
   name: apps-api-debug
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     podname: apps-api-debug
   ports:  
