--- a/playbooks/roles/meta/templates/kube/api/service.yml
+++ b/playbooks/roles/meta/templates/kube/api/service.yml
@@ -4,6 +4,7 @@ kind: Service
 metadata:  
   name: restheart
 spec:
+  type: ClusterIP
   selector:    
     app: restheart
   ports:  
@@ -17,7 +18,7 @@ kind: Service
 metadata:  
   name: restheart-debug
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: restheart
   ports:  
@@ -31,7 +32,7 @@ kind: Service
 metadata:  
   name: restheart-security
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: restheart-security
   ports:  
