--- a/playbooks/roles/meta/templates/kube/mongo-exporter/mongo-exporter-service.yaml
+++ b/playbooks/roles/meta/templates/kube/mongo-exporter/mongo-exporter-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: mongo-exporter
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: mongo-exporter
   ports:
