--- a/playbooks/roles/streams/templates/kube/api/service.yml
+++ b/playbooks/roles/streams/templates/kube/api/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:  
   name: streams-api
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: streams-api
   ports:  
