--- a/playbooks/roles/systems/templates/kube/postgres/service.yml
+++ b/playbooks/roles/systems/templates/kube/postgres/service.yml
@@ -18,7 +18,7 @@ kind: Service
 metadata:
   name: systems-pgadmin
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: systems-pgadmin
   ports:
