--- a/playbooks/roles/systems/templates/kube/postgres_16/service.yml
+++ b/playbooks/roles/systems/templates/kube/postgres_16/service.yml
@@ -18,7 +18,7 @@ kind: Service
 metadata:
   name: systems-pgadmin
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: systems-pgadmin
   ports:
@@ -32,7 +32,7 @@ kind: Service
 metadata:
   name: systems-postgres-external
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: systems-postgres
   ports:
