--- a/playbooks/roles/files/templates/kube/api/service.yml
+++ b/playbooks/roles/files/templates/kube/api/service.yml
@@ -6,7 +6,7 @@ metadata:
     app: files
   name: files-api
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 8080
       targetPort: 8080
