--- a/playbooks/roles/jobs/templates/kube/api/service.yml
+++ b/playbooks/roles/jobs/templates/kube/api/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:  
   name: jobs-api
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: jobs-api
   ports:  
@@ -17,7 +17,7 @@ kind: Service
 metadata:  
   name: jobs-api-debug
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: jobs-api
   ports:  
@@ -31,7 +31,7 @@ kind: Service
 metadata:  
   name: jobs-api-ssl
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: jobs-api
   ports:  
@@ -45,7 +45,7 @@ kind: Service
 metadata:  
   name: jobs-api-other
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: jobs-api
   ports:  
