--- a/playbooks/roles/jobs/templates/kube/postgres/service.yml
+++ b/playbooks/roles/jobs/templates/kube/postgres/service.yml
@@ -3,6 +3,7 @@ kind: Service
 metadata:  
   name: jobs-postgres
 spec:
+  type: ClusterIP
   selector:    
     app: jobs-postgres
   ports:  
@@ -17,7 +18,7 @@ kind: Service
 metadata:  
   name: jobs-pgadmin
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: jobs-pgadmin
   ports:  
