--- a/playbooks/roles/notifications/templates/kube/rabbitmq/service.yml
+++ b/playbooks/roles/notifications/templates/kube/rabbitmq/service.yml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: notifications-rabbitmq
 spec:
+  type: ClusterIP
   selector:
     app: notifications-rabbitmq
   ports:
@@ -19,7 +20,7 @@ kind: Service
 metadata:
   name: notifications-rabbitmq-mgmt
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: notifications-rabbitmq
   ports:
