--- a/playbooks/roles/pgrest/templates/kube/api-service.yml
+++ b/playbooks/roles/pgrest/templates/kube/api-service.yml
@@ -4,7 +4,7 @@ kind: Service
 metadata:  
   name: pgrest-api
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: pgrest-api
   ports:  
