--- a/playbooks/roles/pgrest/templates/kube/pgrest-service.yml
+++ b/playbooks/roles/pgrest/templates/kube/pgrest-service.yml
@@ -3,6 +3,7 @@ kind: Service
 metadata:  
   name: pgrest-postgres
 spec:
+  type: ClusterIP
   selector:    
     app: pgrest-postgres
   ports:  
@@ -16,7 +17,7 @@ kind: Service
 metadata:
   name: pgrest-postgres-nodeport
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: pgrest-postgres
   ports:
