--- a/playbooks/roles/security/templates/kube/api/service.yml
+++ b/playbooks/roles/security/templates/kube/api/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:  
   name: sk-api
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: sk-api
   ports:  
@@ -17,7 +17,7 @@ kind: Service
 metadata:  
   name: sk-api-debug
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: sk-api
   ports:  
@@ -31,7 +31,7 @@ kind: Service
 metadata:  
   name: sk-api-ssl
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: sk-api
   ports:  
@@ -45,7 +45,7 @@ kind: Service
 metadata:  
   name: sk-api-other
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: sk-api
   ports:  
