--- a/playbooks/roles/security/templates/kube/postgres_16/service.yml
+++ b/playbooks/roles/security/templates/kube/postgres_16/service.yml
@@ -3,6 +3,7 @@ kind: Service
 metadata:  
   name: sk-postgres-16
 spec:
+  type: ClusterIP
   selector:    
     app: sk-postgres-16
   ports:  
@@ -17,7 +18,7 @@ kind: Service
 metadata:  
   name: sk-pgadmin
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: sk-pgadmin
   ports:  
