--- a/playbooks/roles/workflows/templates/kube/api/service.yml
+++ b/playbooks/roles/workflows/templates/kube/api/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: workflows-api-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: workflows-api-deployment
   ports:
