--- a/playbooks/roles/workflows/templates/kube/rabbitmq/service.yml
+++ b/playbooks/roles/workflows/templates/kube/rabbitmq/service.yml
@@ -18,7 +18,7 @@ kind: Service
 metadata:
   name: workflows-rabbitmq-mgmt-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: workflows-rabbitmq-deployment
   ports:
