nodeport to clusterip

--- a/playbooks/roles/jobs/templates/kube/rabbitmq/service.yml
+++ b/playbooks/roles/jobs/templates/kube/rabbitmq/service.yml
@@ -19,7 +19,7 @@ kind: Service
 metadata:  
   name: jobs-rabbitmq-mgmt
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:    
     app: jobs-rabbitmq
   ports:  
