--- a/playbooks/roles/jobs/templates/kube/postgres_16/service.yml
+++ b/playbooks/roles/jobs/templates/kube/postgres_16/service.yml
@@ -17,7 +17,7 @@ kind: Service
 metadata:
   name: jobs-pgadmin
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: jobs-pgadmin
   ports:
