--- a/playbooks/roles/notifications/templates/kube/postgres_16/service.yml
+++ b/playbooks/roles/notifications/templates/kube/postgres_16/service.yml
@@ -18,7 +18,7 @@ kind: Service
 metadata:
   name: notifications-pgadmin
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: notifications-pgadmin
   ports:
