--- a/playbooks/roles/pgrest/templates/kube/pgrest-service.yml
+++ b/playbooks/roles/pgrest/templates/kube/pgrest-service.yml
@@ -16,7 +16,7 @@ kind: Service
 metadata:
   name: pgrest-postgres-nodeport
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: pgrest-postgres
   ports:
