--- a/playbooks/roles/security/templates/kube/postgres_16/service.yml
+++ b/playbooks/roles/security/templates/kube/postgres_16/service.yml
@@ -17,7 +17,7 @@ kind: Service
 metadata:  
   name: sk-pgadmin
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: sk-pgadmin
   ports:  
