--- a/playbooks/roles/apps/templates/kube/postgres_16/service.yml
+++ b/playbooks/roles/apps/templates/kube/postgres_16/service.yml
@@ -18,7 +18,7 @@ kind: Service
 metadata:
   name: apps-pgadmin
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: apps-pgadmin
   ports:
@@ -32,7 +32,7 @@ kind: Service
 metadata:
   name: apps-postgres-external
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: apps-postgres
   ports:
