Jobs: Use template variable for postgres image.

--- a/playbooks/roles/jobs/templates/kube/postgres_16/jobs-init-db.yml
+++ b/playbooks/roles/jobs/templates/kube/postgres_16/jobs-init-db.yml
@@ -9,7 +9,7 @@ spec:
       restartPolicy: Never
       containers:
       - name: jobs-init-db
-        image: postgres:16
+        image: {{ jobs_postgres16_image }}
         imagePullPolicy: Always
         command: ["/tmp/jobs-init-db-sh"]
         volumeMounts:
