--- a/playbooks/roles/jobs/templates/kube/api/deploy.yml
+++ b/playbooks/roles/jobs/templates/kube/api/deploy.yml
@@ -62,7 +62,7 @@ spec:
               name: tapis-jobs-secrets
               key: tapis-postgres-password
         - name: TAPIS_DB_JDBC_URL
-          value: "jdbc:postgresql://jobs-postgres-16:5432/tapisjobsdb"
+          value: "jdbc:postgresql://jobs-postgres-16:5432/tapisjobsdb?ApplicationName=jobsapi"
         - name: TAPIS_QUEUE_HOST
           value: jobs-rabbitmq
         - name: TAPIS_QUEUE_ADMIN_USER
