--- a/playbooks/roles/jobs/templates/kube/readers/jobrdr-EventQueue.yml
+++ b/playbooks/roles/jobs/templates/kube/readers/jobrdr-EventQueue.yml
@@ -43,7 +43,7 @@ spec:
               name: tapis-jobs-secrets
               key: tapis-postgres-password
         - name: TAPIS_DB_JDBC_URL
-          value: "jdbc:postgresql://jobs-postgres-16:5432/tapisjobsdb"
+          value: "jdbc:postgresql://jobs-postgres-16:5432/tapisjobsdb?ApplicationName=jobseventq"
         - name: TAPIS_QUEUE_HOST
           value: jobs-rabbitmq
         - name: TAPIS_QUEUE_ADMIN_USER
