--- a/playbooks/roles/notifications/templates/docker/docker-compose.yml
+++ b/playbooks/roles/notifications/templates/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       - TAPIS_SITE_ID={{ notifications_service_site_id }}
       - TAPIS_TENANT_SVC_BASEURL={{ notifications_service_url }}
-      - TAPIS_DB_JDBC_URL=jdbc:postgresql://notifications-postgres-16:5432/tapisntfdb
+      - TAPIS_DB_JDBC_URL=jdbc:postgresql://notifications-postgres-16:5432/tapisntfdb?ApplicationName=ntfapi
       - TAPIS_DB_USER=tapis_ntf
       - TAPIS_QUEUE_HOST=notifications-rabbitmq
       - TAPIS_QUEUE_ADMIN_USER=tapis
@@ -82,7 +82,7 @@ services:
     environment:
       - TAPIS_SITE_ID={{ notifications_service_site_id }}
       - TAPIS_TENANT_SVC_BASEURL={{ notifications_service_url }}
-      - TAPIS_DB_JDBC_URL=jdbc:postgresql://notifications-postgres-16:5432/tapisntfdb
+      - TAPIS_DB_JDBC_URL=jdbc:postgresql://notifications-postgres-16:5432/tapisntfdb?ApplicationName=ntfdispatch
       - TAPIS_DB_USER=tapis_ntf
       - TAPIS_QUEUE_HOST=notifications-rabbitmq
       - TAPIS_QUEUE_ADMIN_USER=tapis
