--- a/playbooks/roles/systems/templates/docker/docker-compose.yml
+++ b/playbooks/roles/systems/templates/docker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         env_file:
             {{ tapisdatadir }}/systems/env
         environment:
-            - TAPIS_DB_JDBC_URL=jdbc:postgresql://systems-postgres-16:5432/tapissysdb
+            - TAPIS_DB_JDBC_URL=jdbc:postgresql://systems-postgres-16:5432/tapissysdb?ApplicationName=sysapi
             - TAPIS_SITE_ID={{ systems_service_site_id }}
             - TAPIS_TENANT_SVC_BASEURL={{ systems_service_url }}
             - TAPIS_GLOBUS_CLIENT_ID
