--- a/playbooks/roles/files/templates/kube/postgres_16/files-init-db.yml
+++ b/playbooks/roles/files/templates/kube/postgres_16/files-init-db.yml
@@ -15,15 +15,23 @@ spec:
         volumeMounts:
         - name: files-init-db-vol
           mountPath: /tmp
-        envFrom:
-        - configMapRef:
-            name: files-environment-vars
         env:
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
               name: tapis-files-secrets
               key: postgres-password
+
+        - name: DB_HOST
+          value: {{files_postgres_hostname}}
+        - name: DB_NAME
+          value: tapisfiles
+        - name: DB_USERNAME
+          value: tapisfiles
+        - name: POSTGRES_DB
+          value: tapisfiles
+        - name: POSTGRES_USER
+          value: tapisfiles
       volumes:
       - name: files-init-db-vol
         configMap:
