--- a/playbooks/roles/files/templates/kube/worker/deploy_archive_workers.yml
+++ b/playbooks/roles/files/templates/kube/worker/deploy_archive_workers.yml
@@ -31,7 +31,7 @@ spec:
         exempt: "yes"
 {% endif %}
       containers:
-        env:
+      - env:
 {% if files_node_name == true %}
           - name: TAPIS_LOCAL_NODE_NAME
             valueFrom:
