--- a/playbooks/roles/authenticator/defaults/main/vars.yml
+++ b/playbooks/roles/authenticator/defaults/main/vars.yml
@@ -1,6 +1,6 @@
 ---
 
-authenticator_service_version: 1.9.0
+authenticator_service_version: 25Q4.0
 authenticator_log_level: INFO
 authenticator_show_traceback: false
 authenticator_image_pull_policy: Always
