--- a/playbooks/roles/actors/defaults/main/images.yml
+++ b/playbooks/roles/actors/defaults/main/images.yml
@@ -1,9 +1,9 @@
 actors_core_image: abaco/core-v3:{{ actors_service_version }}
 actors_grafana_image: grafana/grafana:9.4.7
-actors_nginx_image: abaco/nginx:1.9.0
-actors_nginxk8s_image: abaco/nginxk8s:1.9.0
+actors_nginx_image: abaco/nginx:25Q4.0
+actors_nginxk8s_image: abaco/nginxk8s:25Q4.0
 actors_mongo_image: mongo:4.2.6
 actors_alpine_image: alpine:3.17
-actors_mongobackup_image: tapis/mongobackup:1.9.0
+actors_mongobackup_image: tapis/mongobackup:25Q4.0
 actors_rabbitmq_image: rabbitmq:3.6.12-management
-actors_util_image: tapis/ubutil2204:1.9.0
+actors_util_image: tapis/ubutil2204:25Q4.0
