--- a/playbooks/roles/admin/defaults/main/images.yml
+++ b/playbooks/roles/admin/defaults/main/images.yml
@@ -1,3 +1,3 @@
-admin_util_image: tapis/ubutil2204:1.9.0
-admin_centosutil_image: tapis/centosutil:1.9.0
-admin_skadminutil_image: tapis/skadminutil:1.9.0
+admin_util_image: tapis/ubutil2204:25Q4.0
+admin_centosutil_image: tapis/centosutil:25Q4.0
+admin_skadminutil_image: tapis/skadminutil:25Q4.0
