--- a/playbooks/roles/notifications/defaults/main/images.yml
+++ b/playbooks/roles/notifications/defaults/main/images.yml
@@ -1,6 +1,6 @@
 notifications_pgadmin_image: dpage/pgadmin4:6.20
 notifications_rabbitmq_image: rabbitmq:3.8.11-management
-notifications_util_image: tapis/ubutil2204:1.9.0
-notifications_api_image: tapis/notifications:1.9.0
-notifications_dispatcher_image: tapis/notifications-dispatcher:1.9.0
+notifications_util_image: tapis/ubutil2204:25Q4.0
+notifications_api_image: tapis/notifications:25Q4.0
+notifications_dispatcher_image: tapis/notifications-dispatcher:25Q4.0
 notifications_postgres16_image: postgres:16.9
