--- a/playbooks/roles/pgrest/defaults/main/images.yml
+++ b/playbooks/roles/pgrest/defaults/main/images.yml
@@ -1,3 +1,3 @@
-pgrest_api_image: tapis/pgrest-api:1.9.0
+pgrest_api_image: tapis/pgrest-api:25Q4.0
 pgrest_postgres_image: postgres:13
-pgrest_util_image: tapis/ubutil2204:1.9.0
+pgrest_util_image: tapis/ubutil2204:25Q4.0
