--- a/playbooks/roles/security/defaults/main/images.yml
+++ b/playbooks/roles/security/defaults/main/images.yml
@@ -1,6 +1,6 @@
 security_pgadmin_image: dpage/pgadmin4:6.20
-security_skadminutil_image: tapis/skadminutil:1.9.0
-security_api_image: tapis/securityapi:1.9.0
-security_migrations_image: tapis/securitymigrate:1.9.0
-security_util_image: tapis/ubutil:1.9.0
+security_skadminutil_image: tapis/skadminutil:25Q4.0
+security_api_image: tapis/securityapi:25Q4.0
+security_migrations_image: tapis/securitymigrate:25Q4.0
+security_util_image: tapis/ubutil:25Q4.0
 security_postgres16_image: postgres:16.9
