--- a/playbooks/roles/skadmin/defaults/main/images.yml
+++ b/playbooks/roles/skadmin/defaults/main/images.yml
@@ -1,4 +1,4 @@
-skadmin_securityexport_image: tapis/securityexport:1.9.0
-skadmin_skadminutil_image: tapis/skadminutil:1.9.0
-skadmin_securityadmin_image: tapis/securityadmin:1.9.0
-skadmin_util_image: tapis/ubutil:1.9.0
+skadmin_securityexport_image: tapis/securityexport:25Q4.0
+skadmin_skadminutil_image: tapis/skadminutil:25Q4.0
+skadmin_securityadmin_image: tapis/securityadmin:25Q4.0
+skadmin_util_image: tapis/ubutil:25Q4.0
