--- a/playbooks/roles/systems/defaults/main/images.yml
+++ b/playbooks/roles/systems/defaults/main/images.yml
@@ -1,4 +1,4 @@
 systems_pgadmin_image: dpage/pgadmin4:6.20
 systems_util_image: tapis/ubutil2204:1.9.0
-systems_api_image: tapis/systems:1.9.2
+systems_api_image: tapis/systems:25Q4.0
 systems_postgres16_image: postgres:16.9
