--- a/playbooks/roles/vault/defaults/main/images.yml
+++ b/playbooks/roles/vault/defaults/main/images.yml
@@ -1,3 +1,3 @@
 vault_image: hashicorp/vault:1.16.3
 vault_alpine_image: alpine:latest
-vault_util_image: tapis/ubutil2204:1.9.0
+vault_util_image: tapis/ubutil2204:25Q4.0
