compression for tapisui

--- a/playbooks/roles/proxy/templates/kube/nginx/locations/ui.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/ui.conf
@@ -6,6 +6,8 @@ location /
 {% else %}
     proxy_pass {{ proxy_primary_site_admin_tenant_base_url }};
 {% endif %}        
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     proxy_redirect off;
     proxy_set_header Host $host;
 }
