--- a/playbooks/roles/monitoring/defaults/main/images.yml
+++ b/playbooks/roles/monitoring/defaults/main/images.yml
@@ -1,6 +1,6 @@
 monitoring_tapis_exporter_image: tapis/exporter:1.9.0
 monitoring_alpine_image: alpine:3.6
-monitoring_postgres_image: bitnami/postgresql:14
+monitoring_postgres_image: postgres:16.9
 monitoring_elasticsearch_image: docker.elastic.co/elasticsearch/elasticsearch:7.17.9
 monitoring_kibana_image: docker.elastic.co/kibana/kibana:7.17.9
 monitoring_grafana_image: grafana/grafana:8.5.5
